@@ -83,8 +83,17 @@
             <artifactId>javax.inject</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
+            <classifier>classes</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm</artifactId>
         </dependency>
         <dependency>
             <groupId>org.glassfish</groupId>
@@ -223,7 +232,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <flags>-Xmx128m -client</flags>
+                    <flags>-Xmx128m --enable-native-access=ALL-UNNAMED</flags>
                     <classifier>executable</classifier>
                     <allowOtherTypes>true</allowOtherTypes>
                     <programFile>concord-cli-${project.version}</programFile>
